--- a/Next mover/requirements.txt
+++ b/Next mover/requirements.txt
@@ -1,6 +1,7 @@
-PySimpleGUI==4.70.0
-numpy==1.21.0
-Pillow==8.2.0
-pyautogui==0.9.53
-keyboard==0.13.5
-opencv-python==4.5.3.56
+PySimpleGUI>=4.60.5
+numpy>=1.25.1
+Pillow>=10.0.0
+pyautogui>=0.9.54
+keyboard>=0.13.5
+opencv-python>=4.8.0.74
+pynpyt>=1.7.6
