--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,28 @@
+---
+name: "pre-release"
+
 on:
   push:
-  
-  - name: PyInstaller Windows
-    # You may pin to the exact commit or the version.
-    # uses: JackMcKew/pyinstaller-action-windows@a8dee21ad01bbc7e7363d445bb632691b95ba057
-    uses: JackMcKew/pyinstaller-action-windows@v0.1.2
-    with: /Next-mover/next_clicker.py
-      # Directory containing source code (optional requirements.txt).
-      path: # default is src
-      # Specify a custom URL for PYPI
-      pypi_url: # optional, default is https://pypi.python.org/
-      # Specify a custom URL for PYPI Index
-      pypi_index_url: # optional, default is https://pypi.python.org/simple
-      # Specify a file path for .spec file
-      spec: # optional, default is 
-            
+    branches:
+      - "master"
+
+jobs:
+  pre-release:
+    name: "Pre Release"
+    runs-on: "ubuntu-latest"
+
+    steps:
+      # ...
+      - name: "Build & test"
+        run: |
+          echo "done!"
+
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: |
+            LICENSE.txt
+            *.jar
