--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   pre-release:
     name: "Pre Release"
-    runs-on: "ubuntu-latest"
+    runs-on: "windows-latest"
 
     steps:
       # ...
@@ -25,4 +25,5 @@ jobs:
           title: "Development Build"
           files: |
             LICENSE.txt
-            *.py
+            Next mover/lib.py
+            Next mover/next_clicker.py
