--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,50 @@
----
-name: "pre-release"
+name: Python Release Workflow
 
 on:
   push:
     branches:
-      - "master"
+      - main
 
 jobs:
-  pre-release:
-    name: "Pre Release"
-    runs-on: "windows-latest"
+  release:
+    runs-on: windows-latest
 
     steps:
-      # ...
-      - name: "Build & test"
-        run: |
-          echo "done!"
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
-          files: |
-            LICENSE.txt
-            Next mover/lib.py
-            Next mover/next_clicker.py
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'  # Replace with your Python version
+
+    - name: Install PyInstaller
+      run: |
+        python -m pip install pyinstaller
+
+    - name: Build executable with PyInstaller
+      run: |
+        pyinstaller --onefile your_script.py  # Replace with your actual script name
+
+    - name: Create release
+      id: create_release
+      uses: actions/create-release@v1
+      with:
+        tag_name: v1.0.0  # Replace with your desired release tag
+        release_name: Release v1.0.0  # Replace with your desired release name
+        body: |
+          Changes in this release:
+          - Describe your changes here
+
+    - name: Upload release artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: release-artifact
+        path: dist  # Change to the actual path where PyInstaller puts the executable
+
+    - name: Deploy
+      uses: actions/deploy@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        file: release-artifact
+        release_id: ${{ steps.create_release.outputs.id }}
